--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -102,8 +102,14 @@
           <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
         </td>
         <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
-        <td colspan="2"></td>
+        <td colspan="1"></td>
         {% } %}
+      <td class="download">
+        <button class="btn btn-primary" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
+          <i class="icon-download icon-white"></i>
+          <span>Download as txt</span>
+        </button>
+      </td>
       <td class="delete">
         <button class="btn btn-danger" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
           <i class="icon-trash icon-white"></i>
